Resolves: tdf#151046 INDIRECT() try named expressions and DB range names first

... as older 1K columns allowed names that would now match a 16k
columns cell address, which ConvertSingleRef() would already
resolve.

Change-Id: I9322732e554da20c81856c0a30c41a246356f65b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140147
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins
(cherry picked from commit cc28ea4c4483df1643154adc50bd537e35fabb05)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140154
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>